--- a/first_rs_bot/Cargo.toml
+++ b/first_rs_bot/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv = "0.15.0"
+reqwest = "0.11.18"
+serde = "1.0.183"
+serde_json = "1.0.105"
 serenity = "0.11"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
-
