--- a/youtube-downloader/testing2/Cargo.toml
+++ b/youtube-downloader/testing2/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "rocket-testing"
+name = "testing2"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { version="0.5.0-rc.3", features = ["json"] }
-reqwest = { version="0.11.13", features = ["json"] }
-lru_time_cache = "0.11.11"
 rustube = { version = "0.6.0", features = ["blocking"] }
