--- a/youtube-downloader/testing/Cargo.toml
+++ b/youtube-downloader/testing/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 rustube = "0.6.0"
 tokio = { version = "1", features = ["full", "rt-multi-thread"] }
+url = "2.4.0"
 youtube_dl = "0.9.0"
