--- a/youtube-downloader/testing/Cargo.toml
+++ b/youtube-downloader/testing/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rustube = "0.6.0"
+serde_json = "1.0.105"
 tokio = { version = "1", features = ["full", "rt-multi-thread"] }
 url = "2.4.0"
 youtube_dl = "0.9.0"
