--- a/exercises/.vscode/tasks.json
+++ b/exercises/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "label": "Build and Run",
         "type": "shell",
-        "command": "cargo build && cargo run",
+        "command": "cargo run",
         "group": {
           "kind": "build",
           "isDefault": true
