--- a/cleverbot-bot/Cargo.toml
+++ b/cleverbot-bot/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.30"
 regex = "1.9.5"
-reqwest = "0.11.20"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version="0.11.20", features = ["blocking", "json"] }
 tokio = { version = "1.32.0", features = ["full"] }
+
