--- a/poise-bot/Cargo.toml
+++ b/poise-bot/Cargo.toml
@@ -10,6 +10,7 @@ poise = "0.5.2"
 shuttle-poise = "0.25.0"
 shuttle-runtime = "0.25.0"
 shuttle-secrets = "0.25.0"
+shuttle-static-folder = "0.25.0"
 tracing = "0.1.37"
 tokio = "1.26.0"
 serde = { version = "1.0", features = ["derive"] }
