--- a/poise-bot/Cargo.toml
+++ b/poise-bot/Cargo.toml
@@ -16,3 +16,6 @@ tokio = "1.26.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version="0.11.20", features = ["json"] }
+chrono = "0.4.30"
+urlencoding = "2.1.3"
+
