--- a/the-cat-with-horns/Cargo.toml
+++ b/the-cat-with-horns/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "attempt3"
+name = "thecatwithhorns"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -7,8 +7,8 @@ publish = false
 [dependencies]
 anyhow = "1.0.68"
 poise = "0.5.2"
-shuttle-poise = "0.31.0"
-shuttle-runtime = "0.31.0"
-shuttle-secrets = "0.31.0"
+shuttle-poise = "0.32.0"
+shuttle-runtime = "0.32.0"
+shuttle-secrets = "0.32.0"
 tracing = "0.1.37"
 tokio = "1.26.0"
