--- a/the-cat-with-horns/Cargo.toml
+++ b/the-cat-with-horns/Cargo.toml
@@ -11,8 +11,19 @@ shuttle-poise = "0.32.0"
 shuttle-runtime = "0.32.0"
 shuttle-secrets = "0.32.0"
 tracing = "0.1.37"
-tokio = "1.26.0"
+tokio = { version = "1.26.0", features = ["full"] }
 reqwest = "0.11.22"
 serde_json = "1.0.108"
 rand = "0.8.5"
 ordinal = "0.3.2"
+postgrest = "1.6.0"
+postgres = "0.19.7"
+tokio-postgres = "0.7.10"
+sqlx = { version = "0.7.2", features = ["time", "chrono"] }
+sqlx-core = "0.7.2"
+sqlx-macros = "0.7.2"
+sqlx-postgres = "0.7.2"
+chrono = { version = "0.4.31", features = ["serde"] }
+futures = "0.3.29"
+tokio-cron-scheduler = "0.9.4"
+chrono-tz = "0.8.4"
