--- a/the-cat-with-horns/Cargo.toml
+++ b/the-cat-with-horns/Cargo.toml
@@ -27,3 +27,4 @@ chrono = { version = "0.4.31", features = ["serde"] }
 futures = "0.3.29"
 tokio-cron-scheduler = "0.9.4"
 chrono-tz = "0.8.4"
+regex = "1.10.2"
