--- a/the-cat-with-horns/Cargo.toml
+++ b/the-cat-with-horns/Cargo.toml
@@ -28,3 +28,5 @@ futures = "0.3.29"
 tokio-cron-scheduler = "0.9.4"
 chrono-tz = "0.8.4"
 regex = "1.10.2"
+tokio_schedule = "0.3.1"
+tokio-cron = "0.1.2"
