--- a/marco-proc-workspace/hello_macro_derive/Cargo.toml
+++ b/marco-proc-workspace/hello_macro_derive/Cargo.toml
@@ -11,3 +11,5 @@ proc-macro = true
 [dependencies]
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
+proc-macro2 = "1.0.76"
+sqlx = { version = "0.7.3", features = ["postgres", "migrate", "runtime-tokio-native-tls"] }
