--- a/youtube-downloader (lots of web stuff)/timetabler/API/Cargo.toml
+++ b/youtube-downloader (lots of web stuff)/timetabler/API/Cargo.toml
@@ -12,6 +12,7 @@ shuttle-axum = "0.39.0"
 shuttle-runtime = "0.39.0"
 tokio = "1.28.2"
 tracing = "0.1.40"
-tower-http = { version = "0.5.0", features = ["fs"] }
+tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tracing-subscriber = "0.3.18"
