--- a/youtube-downloader (lots of web stuff)/timetabler/package.json
+++ b/youtube-downloader (lots of web stuff)/timetabler/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently new \"vite\" \"cargo shuttle run --working-directory API\"",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --emptyOutDir",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
