--- a/youtube-downloader (lots of web stuff)/timetabler/API/Cargo.toml
+++ b/youtube-downloader (lots of web stuff)/timetabler/API/Cargo.toml
@@ -9,7 +9,7 @@ chrono = "0.4.34"
 reqwest = "0.11.24"
 scraper = "0.18.1"
 shuttle-axum = "0.39.0"
-shuttle-runtime = "0.39.0"
+shuttle-runtime = { version = "0.39.0", default-features = false }
 tokio = "1.28.2"
 tracing = "0.1.40"
 tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
