--- a/french-axum-tutorial/Cargo.toml
+++ b/french-axum-tutorial/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.34.0", features = ["full"] }
-axum = "0.6"
+axum = "0.7.5"
+tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.114"
 
 [dev-dependencies]
 anyhow = "1"
