--- a/french-axum-tutorial/Cargo.toml
+++ b/french-axum-tutorial/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.34.0", features = ["full"] }
-axum = "0.7.5"
+axum = { verison = "0.7.5", features = ["macros"] }
 tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
+tower-cookies = "0.10"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 serde = { version = "1.0", features = ["derive"] }
