--- a/french-axum-tutorial/Cargo.toml
+++ b/french-axum-tutorial/Cargo.toml
@@ -7,13 +7,15 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.34.0", features = ["full"] }
-axum = { verison = "0.7.5", features = ["macros"] }
+axum = { version = "0.7.5", features = ["macros"] }
 tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
 tower-cookies = "0.10"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.114"
+lazy-regex = "2"
+async-trait = "0.1"
 
 [dev-dependencies]
 anyhow = "1"
