--- a/dsa/double-inversions/Cargo.toml
+++ b/dsa/double-inversions/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 reqwest = "0.12.7"
-tokio = "1.40.0"
+serde = { version = "1.0.210", features = ["derive"] }
+thiserror = "1.0.63"
+tokio = { version = "1.40.0", features = ["full"] }
