--- a/clevreq/Cargo.toml
+++ b/clevreq/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
+md-5 = "0.10.6"
+percent-encoding = "2.3.1"
+reqwest = "0.12.7"
+serde = { version = "1.0.210", features = ["derive"] }
+thiserror = "1.0.63"
+tokio = { version = "1.40.0", features = ["full"] }
+url = "2.5.2"
