--- a/clevreq/Cargo.toml
+++ b/clevreq/Cargo.toml
@@ -11,4 +11,5 @@ reqwest = "0.12.7"
 serde = { version = "1.0.210", features = ["derive"] }
 thiserror = "1.0.63"
 tokio = { version = "1.40.0", features = ["full"] }
+tracing = "0.1.40"
 url = "2.5.2"
