--- a/wasm-canvas/Cargo.toml
+++ b/wasm-canvas/Cargo.toml
@@ -9,7 +9,6 @@ crate-type = ["cdylib"]
 [dependencies]
 js-sys = "0.3.74"
 wasm-bindgen = "0.2.97"
-web-sys = { version = "0.3.74", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window'] }
-tokio = { version = "1" ,features = ["full"] }
-poise = "0.6.1"
+web-sys = { version = "0.3.74", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'console'] }
+
 
